projects/los-retail/lead/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lead
  name: lead-svc
  namespace: los-retail-dev
spec:
  ports:
    - port: 6011
      protocol: TCP
      targetPort: 6011
  selector:
    app: lead
